--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "contact_me_form",
+  "homepage": "https://sayanmanda.github.io/contact_me",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,10 +12,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
